Name:           binary-protocol
Description:    Monad to ease implementing a binary network protocol.
Version:        1.0
Category:       Data
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         Gregory Crosswhite
Maintainer:     Gregory Crosswhite <gcross@phys.washington.edu>
Homepage:       http://github.com/gcross/binary-protocol
Synopsis:       Monad to ease implementing a binary network protocol.
Build-Type:     Simple

Library
  Build-Depends:    base >= 4,
                    binary >= 0.5,
                    bytestring >= 0.9.1,
                    mtl >= 1.1
  Hs-Source-Dirs:   .
  Exposed-Modules:  Control.Monad.BinaryProtocol
  GHC-Options:      -Wall
